[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemy/MovingDummy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy/training_dummy_moving-Sheet.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemy/MovingDummyPlayer.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="MovingDummy" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
collision_layer = 12
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 4
frame = 3

[node name="MovingDummyPlayer" type="AnimationPlayer" parent="Sprite" index="0"]
anims/idle = SubResource( 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
visible = true

[node name="EnemyHitbox" parent="." index="2"]
visible = true

[node name="State" parent="." index="4"]
visible = false

[node name="HealthBar" parent="Position2D" index="0"]
visible = false

[node name="Timer" type="Timer" parent="." index="9"]
wait_time = 0.5
[connection signal="animate_idle" from="." to="Sprite/MovingDummyPlayer" method="_on_MovingDummy_animate_idle"]
[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
